@@ -16,11 +16,12 @@ The rules for this file:
 -------------------------------------------------------------------------------
 ??/??/?? IAlibay, HeetVekariya, marinegor, lilyminium, RMeli,
          ljwoods2, aditya292002, pstaerk, PicoCentauri, BFedder,
-         tyler.je.reddy, SampurnaM, leonwehrhan, kainszs
+         tyler.je.reddy, SampurnaM, leonwehrhan, kainszs, orionarcher
 
  * 2.8.0
 
 Fixes
+ * Convert openmm Quantity to raw value for KE and PE in OpenMMSimulationReader.
  * Atomname methods can handle empty groups (Issue #2879, PR #4529)
  * Add support for TPR files produced by Gromacs 2024.1 (PR #4523)
  * Remove mutable data from ``progressbar_kwargs`` argument in ``AnalysisBase.run()``
